[gd_scene format=3 uid="uid://ddrnhqcdvaui"]

[ext_resource type="Script" path="res://scripts/ui/trading_terminal.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/icons/icon_fuel.png" id="2_fuel"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/icons/icon_hull.png" id="3_hull"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/icons/icon_scrap.png" id="4_scrap"]

[node name="TradingTerminal" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -200.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_script")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.02, 0.05, 0.1, 0.95)

[node name="Border" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.4, 0.9, 1, 0.1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "[ SUPPLY NETWORK ]"
horizontal_alignment = 1

[node name="HSeparator" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(0.4, 0.9, 1, 0.3)

[node name="FuelRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/FuelRow"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("2_fuel")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FuelRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "FUEL (+5)"

[node name="BuyFuelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/FuelRow"]
unique_name_in_owner = true
layout_mode = 2
text = "BUY"

[node name="FuelCostLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FuelRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "10 CR"

[node name="HullRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HullRow"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("3_hull")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HullRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "REPAIR (+10%)"

[node name="RepairHullButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HullRow"]
unique_name_in_owner = true
layout_mode = 2
text = "FIX"

[node name="RepairCostLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HullRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "15 CR"

[node name="HSeparator2" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(0.4, 0.9, 1, 0.3)

[node name="StatusMessage" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 1, 0.6, 1)
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1
